--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ Thumbs.db
 *.log #log files, for some plugins
 *.pyc #python bytecode cache, for some plugins.
 sysinfo.txt #Unity3D Generated File On Crash Reports
+.vs/kohya/xs/UserPrefs.xml
+.vs/kohya/xs/sqlite3/db.lock
+.vs/kohya/xs/sqlite3/storage.ide
+.vs/kohya/xs/sqlite3/storage.ide-shm
+.vs/kohya/xs/sqlite3/storage.ide-wal
